xrpl-escrow-stdlib/tests/finish_result/compile_fail/succeed_with_zero.rs
use xrpl_escrow_stdlib::FinishResult;

fn main() {
    let _ = FinishResult::succeed_with::<0>();
}
